# ai-sdk-rs

./: .gitignore  BUILD.bazel  Cargo.toml  LICENSE  PERFORMANCE_SUITE_AUDIT.md  README.md
.beads/: issues.jsonl
.beads/agent-picks/ai-sdk-rs-101.lock.released.stale-1771044706540532851/: claim.json
.beads/agent-picks/ai-sdk-rs-1gj.lock.released.stale-1771042250262068858/: claim.json
.beads/agent-picks/ai-sdk-rs-3v9.lock.released.stale-1771045017949528660/: claim.json
.beads/agent-picks/ai-sdk-rs-45c.lock.released.stale-1771042085904782418/: claim.json
.beads/agent-picks/ai-sdk-rs-62d.lock.released.stale-1771035535292980370/: claim.json
.beads/agent-picks/ai-sdk-rs-650.lock.released.stale-1771042170270556022/: claim.json
.beads/agent-picks/ai-sdk-rs-8uf.lock.released.stale-1771035021432238449/: claim.json
.beads/agent-picks/ai-sdk-rs-9jf.lock.released.stale-1771035215695398150/: claim.json
.beads/agent-picks/ai-sdk-rs-9v0.lock.released.stale-1771042426699177661/: claim.json
.beads/agent-picks/ai-sdk-rs-am3.lock.released.stale-1771044178248228586/: claim.json
.beads/agent-picks/ai-sdk-rs-bxp.lock.released.stale-1771044868057207808/: claim.json
.beads/agent-picks/ai-sdk-rs-cpi.lock.released.stale-1771041992530850384/: claim.json
.beads/agent-picks/ai-sdk-rs-dre.lock.released.stale-1771042354686230985/: claim.json
.beads/agent-picks/ai-sdk-rs-efl.lock.released.stale-1771042458536954603/: claim.json
.beads/agent-picks/ai-sdk-rs-h3z.lock.released.stale-1771035093085939252/: claim.json
.beads/agent-picks/ai-sdk-rs-ika.lock.released.stale-1771042302747377442/: claim.json
.beads/agent-picks/ai-sdk-rs-oix.lock.released.stale-1771044699712471391/: claim.json
.beads/agent-picks/ai-sdk-rs-pfo.lock.released.stale-1771035917685640407/: claim.json
.beads/agent-picks/ai-sdk-rs-qw4.lock/: claim.json
.beads/agent-picks/ai-sdk-rs-r9n.lock.released.stale-1771045041594078021/: claim.json
.beads/agent-picks/ai-sdk-rs-v4c.lock.released.stale-1771044697399557095/: claim.json
.beads/agent-picks/ai-sdk-rs-vvn.lock.released.stale-1771035772747101580/: claim.json
.github/workflows/: release-check.yml
benches/: core_hot_paths.rs  openai_responses.rs  provider_matrix.rs  streaming_pipeline.rs
benches/support/: fixture_replay.rs  mod.rs  openai_responses.rs  provider_matrix.rs
crates/core/src/: capabilities.rs  embedding.rs  error.rs  image.rs  json.rs  lib.rs  options.rs  retry.rs  stream_collect.rs  transport.rs
crates/core/tests/: json_tests.rs  request_builder_defaults_tests.rs  (+1 more)
docs/: benchmarking.md
docs/metrics/: ai-sdk-rs-2zp-gate-log.md  ai-sdk-rs-2zp-slice-metrics.csv
docs/plans/: openai-responses-parity-gap-matrix.md  provider-expansion-baseline-sdk-matrix.md
examples/: github-models.rs
examples/anthropic-hello-twice/: Cargo.toml
examples/anthropic-thinking/: Cargo.toml
examples/embed-openai-compatible/: Cargo.toml
examples/generate-stream/: Cargo.toml
examples/generate-text/: Cargo.toml
examples/openai-reasoning-summary/: Cargo.toml
scripts/: benchmark-compare-baseline.sh  benchmark-save-baseline.sh
src/: lib.rs  provider.rs  transport_http_common.rs  transport_hyper.rs  transport_reqwest.rs  transport_websocket_common.rs
src/core/: capabilities.rs  embedding.rs  error.rs  event_mapper.rs  image.rs  mod.rs  retry.rs  stream_collect.rs  transport.rs
src/providers/: mod.rs
src/streaming_sse/: mod.rs  pipeline.rs  stream.rs
src/types/: catalog.rs  embedding.rs  image.rs  json.rs  mod.rs  usage.rs  v2.rs
tests/: benchmark_harness_surface_tests.rs  provider_builder_surfaces.rs  provider_construction_surface_tests.rs  provider_construction_surfaces.rs  single_module_tree_layout_tests.rs  transport_parity_tests.rs
worklog/plans/: plan-anthropic-null-sanitized-transport-remediation.md  plan-codex-request-defaults-tool-choice-parallel-remediation.md  plan-codex-websocket-session-parity-remediation.md  plan-google-provider-family-single-owner-remediation.md  plan-hyper-http-transport-single-owner-remediation.md  plan-offline-benchmark-harness-single-owner-remediation.md  plan-openai-responses-language-model-thin-shell-remediation.md  plan-provider-construction-single-path-remediation.md  plan-rust-idiomaticity.md  plan-single-module-tree-remediation.md  plan-stream-part-normalization-single-path-remediation.md  plan-v2-request-surface-single-authority-remediation.md
(+171 files in other folders)
