[package]
name = "ai-sdk-rs"
version = "0.1.1"
edition = "2021"
autoexamples = false
license = "MIT"
authors = ["nodecode.ai"]
description = "AI SDK for Rust with unified model/provider abstractions"
repository = "https://github.com/nodecode/ai-sdk-rs"
homepage = "https://github.com/nodecode/ai-sdk-rs"
documentation = "https://docs.rs/ai-sdk-rs"
readme = "README.md"
keywords = ["ai", "llm", "sdk", "streaming", "providers"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
rust-version = "1.78"

[workspace]
members = [
  ".",
  "examples/embed-openai-compatible",
  "examples/generate-text",
  "examples/generate-stream",
  "examples/openai-reasoning-summary",
]
resolver = "2"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
aws-credential-types = "1"
aws-sigv4 = { version = "1", features = ["http0-compat", "sign-http", "http1"] }
aws-smithy-eventstream = "0.60.11"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
directories = "5"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "client-proxy", "http1", "tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tower-service = "0.3"
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", default-features = false, features = ["std", "v4", "serde"] }

[features]
default = ["stream"]
stream = []

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1", features = ["macros"] }

[[bench]]
name = "openai_responses"
harness = false

[[bench]]
name = "streaming_pipeline"
harness = false

[[bench]]
name = "core_hot_paths"
harness = false

[[bench]]
name = "provider_matrix"
harness = false
